# paperclip

./: CLAUDE.md  package.json
doc/: DATABASE.md  (+1 more)
evals/bench/: README.md  bench.schema.json  package.json  pyproject.toml
evals/bench/benchmarks/imported/swebench-lite/: README.md
evals/bench/benchmarks/imported/swebench-lite/tasks/: pytest-dev__pytest-6116.yaml
evals/bench/benchmarks/paperclip-native/: README.md
evals/bench/benchmarks/paperclip-native/tasks/pclip-native-001-audit-log-mission/: evaluator.yaml  issue.md  rubric.md  task.yaml
evals/bench/companies/: README.md
evals/bench/companies/ceo-only/: .paperclip.yaml  COMPANY.md
evals/bench/companies/ceo-only/agents/ceo/: AGENTS.md
evals/bench/companies/eng-squad-basic/: .paperclip.yaml  COMPANY.md
evals/bench/companies/eng-squad-basic/agents/ceo/: AGENTS.md
evals/bench/companies/eng-squad-basic/agents/cto/: AGENTS.md
evals/bench/companies/eng-squad-basic/agents/qa/: AGENTS.md
evals/bench/companies/eng-squad-basic/agents/senior-engineer/: AGENTS.md
evals/bench/companies/governed-eng-squad/: .paperclip.yaml  COMPANY.md
evals/bench/companies/governed-eng-squad/agents/ceo/: AGENTS.md
evals/bench/companies/governed-eng-squad/agents/cto/: AGENTS.md
evals/bench/companies/governed-eng-squad/agents/qa/: AGENTS.md
evals/bench/fixtures/: README.md  secrets.example.env
evals/bench/scripts/: validate-manifests.mjs
evals/bench/src/: README.md
evals/bench/suites/: paperclip-native-smoke.yaml  smoke.local.yaml  swebench-lite-smoke.yaml
evals/bench/tasks/: paperclip-native-smoke.jsonl
(+112 files in other folders)
