[project]
name = "paperclip-bench-python"
version = "0.0.0"
description = "Placeholder bridge package for paperclip-bench Python evaluator integrations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
